Image zoom, dark mode and minor fixes

--- a/css/tailwind-input.css
+++ b/css/tailwind-input.css
@@ -1,3 +1,55 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .label {
+        @apply block
+        uppercase
+        tracking-wide
+        text-gray-700 dark:text-gray-50
+        text-xs font-bold mb-2;
+    }
+
+    .input {
+        @apply appearance-none
+        block
+        w-full
+        bg-gray-200 dark:bg-[#263238]
+        text-gray-700 dark:text-gray-100
+        border border-gray-200 dark:border-gray-500
+        rounded
+        py-3 px-4 mb-3
+        leading-tight
+        focus:outline-none focus:bg-white focus:border-gray-500;
+    }
+
+    .action-button {
+        @apply py-2
+        mt-4
+        w-full
+        flex justify-center items-center
+        rounded-md
+        text-white font-bold uppercase
+        active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out
+        disabled:bg-gray-400 dark:disabled:bg-gray-600;
+    }
+
+    .zoom-button {
+        @apply flex justify-center items-center
+        p-0
+        w-10 h-10
+        bg-blue-100 hover:bg-blue-500
+        rounded-full
+        active:shadow-lg
+        shadow
+        transition ease-in
+        focus:outline-none
+        text-black
+        hover:text-white
+        absolute
+        bottom-0
+        right-0;
+    }
+
+}
